feat: more refs

--- a/mtrf.bib
+++ b/mtrf.bib
@@ -494,6 +494,7 @@ Corpora
 }
 
 
+
 ------------------------
 DSM
 ------------------------
@@ -1171,3 +1172,178 @@ ambiguity resolution},
    publisher={Elsevier}
 }
 
+
+
+
+
+
+
+
+
+
+
+
+@inproceedings{mukuze2018a,
+  title={A vision-grounded dataset for predicting typical locations for verbs},
+  author={Mukuze, Nelson and Rohrbach, Anna and Demberg, Vera and Schiele, Bernt},
+  booktitle={The 11th edition of the Language Resources and Evaluation Conference (LREC)},
+  year={2018}
+}
+
+------------------------
+Commonsense
+------------------------
+@inproceedings{levesque2011winograd,
+  title={The Winograd schema challenge.},
+  author={Levesque, Hector J and Davis, Ernest and Morgenstern, Leora},
+  booktitle={AAAI Spring Symposium: Logical Formalizations of Commonsense Reasoning},
+  volume={46},
+  pages={47},
+  year={2011}
+}
+
+@inproceedings{roemmele2011choice,
+  title={Choice of Plausible Alternatives: An Evaluation of Commonsense Causal Reasoning.},
+  author={Roemmele, Melissa and Bejan, Cosmin Adrian and Gordon, Andrew S},
+  booktitle={AAAI Spring Symposium: Logical Formalizations of Commonsense Reasoning},
+  pages={90--95},
+  year={2011}
+}
+
+@article{mostafazadeh2016corpus,
+  title={A corpus and evaluation framework for deeper understanding of commonsense stories},
+  author={Mostafazadeh, Nasrin and Chambers, Nathanael and He, Xiaodong and Parikh, Devi and Batra, Dhruv and Vanderwende, Lucy and Kohli, Pushmeet and Allen, James},
+  journal={arXiv preprint arXiv:1604.01696},
+  year={2016}
+}
+
+@inproceedings{tandon2016commonsense,
+  title={Commonsense in Parts: Mining Part-Whole Relations from the Web and Image Tags.},
+  author={Tandon, Niket and Hariman, Charles and Urbani, Jacopo and Rohrbach, Anna and Rohrbach, Marcus and Weikum, Gerhard},
+  booktitle={AAAI},
+  pages={243--250},
+  year={2016}
+}
+
+@inproceedings{yatskar2016stating,
+  title={Stating the Obvious: Extracting Visual Common Sense Knowledge.},
+  author={Yatskar, Mark and Ordonez, Vicente and Farhadi, Ali},
+  booktitle={HLT-NAACL},
+  pages={193--198},
+  year={2016}
+}
+
+
+@article{baroni2017commai,
+  title={CommAI: Evaluating the first steps towards a useful general AI},
+  author={Baroni, Marco and Joulin, Armand and Jabri, Allan and Kruszewski, Germ{\`a}n and Lazaridou, Angeliki and Simonic, Klemen and Mikolov, Tomas},
+  journal={arXiv preprint arXiv:1701.08954},
+  year={2017}
+}
+
+
+------------------------
+Multimodal
+------------------------
+@article{both2017cross,
+  title={Cross-modal Knowledge Transfer: Improving the Word Embedding of Apple by Looking at Oranges},
+  author={Both, Fabian and Thoma, Steffen and Rettinger, Achim},
+  year={2017}
+}
+
+@article{gupta2015visual,
+  title={Visual semantic role labeling},
+  author={Gupta, Saurabh and Malik, Jitendra},
+  journal={arXiv preprint arXiv:1505.04474},
+  year={2015}
+}
+
+@article{silberer2017visually,
+  title={Visually grounded meaning representations},
+  author={Silberer, Carina and Ferrari, Vittorio and Lapata, Mirella},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={39},
+  number={11},
+  pages={2284--2297},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{silberer2014learning,
+  title={Learning Grounded Meaning Representations with Autoencoders.},
+  author={Silberer, Carina and Lapata, Mirella},
+  booktitle={ACL (1)},
+  pages={721--732},
+  year={2014}
+}
+
+@article{bruni2014multimodal,
+  title={Multimodal distributional semantics.},
+  author={Bruni, Elia and Tran, Nam-Khanh and Baroni, Marco},
+  journal={J. Artif. Intell. Res.(JAIR)},
+  volume={49},
+  number={2014},
+  pages={1--47},
+  year={2014}
+}
+
+@article{regneri2013grounding,
+  title={Grounding action descriptions in videos},
+  author={Regneri, Michaela and Rohrbach, Marcus and Wetzel, Dominikus and Thater, Stefan and Schiele, Bernt and Pinkal, Manfred},
+  journal={Transactions of the Association for Computational Linguistics},
+  volume={1},
+  pages={25--36},
+  year={2013}
+}
+
+@article{kiros2014unifying,
+  title={Unifying visual-semantic embeddings with multimodal neural language models},
+  author={Kiros, Ryan and Salakhutdinov, Ruslan and Zemel, Richard S},
+  journal={arXiv preprint arXiv:1411.2539},
+  year={2014}
+}
+
+@article{peng2017cm,
+  title={CM-GANs: Cross-modal Generative Adversarial Networks for Common Representation Learning},
+  author={Peng, Yuxin and Qi, Jinwei and Yuan, Yuxin},
+  journal={arXiv preprint arXiv:1710.05106},
+  year={2017}
+}
+
+@article{wang2018learning,
+  title={Learning Multimodal Word Representation via Dynamic Fusion Methods},
+  author={Wang, Shaonan and Zhang, Jiajun and Zong, Chengqing},
+  journal={arXiv preprint arXiv:1801.00532},
+  year={2018}
+}
+
+@article{chen2015microsoft,
+  title={Microsoft COCO captions: Data collection and evaluation server},
+  author={Chen, Xinlei and Fang, Hao and Lin, Tsung-Yi and Vedantam, Ramakrishna and Gupta, Saurabh and Doll{\'a}r, Piotr and Zitnick, C Lawrence},
+  journal={arXiv preprint arXiv:1504.00325},
+  year={2015}
+}
+
+@inproceedings{liu2016coupled,
+  title={Coupled generative adversarial networks},
+  author={Liu, Ming-Yu and Tuzel, Oncel},
+  booktitle={Advances in neural information processing systems},
+  pages={469--477},
+  year={2016}
+}
+
+@article{peng2017cm,
+  title={CM-GANs: Cross-modal Generative Adversarial Networks for Common Representation Learning},
+  author={Peng, Yuxin and Qi, Jinwei and Yuan, Yuxin},
+  journal={arXiv preprint arXiv:1710.05106},
+  year={2017}
+}
+
+
+@inproceedings{vaswani2017attention,
+  title={Attention is all you need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, {\L}ukasz and Polosukhin, Illia},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={6000--6010},
+  year={2017}
+}
